<resources>
    <string name="app_name" translatable="false">CaecusChess</string>
    <string name="engine_hash_default" translatable="false">64</string>
    <string name="moves_per_session_default" translatable="false">60</string>
    <string name="time_control_default" translatable="false">120000</string>
    <string name="time_increment_default" translatable="false">0</string>
    <string name="squareSelectType_default" translatable="false">1</string>
    <string name="language_default" translatable="false">default</string>
    <string name="font_size_default" translatable="false">12</string>
    <string name="thinking_arrows_default" translatable="false">4</string>
    <string name="scroll_sensitivity_default" translatable="false">2</string>
    <string name="book_line_length_default" translatable="false">1000000</string>
    <string name="viewPieceType_default" translatable="false">1</string>
    <string name="viewPieceSet_default" translatable="false">chesscases</string>
    <string name="autoDelay_default" translatable="false">5000</string>
    <string name="move_announce_type_default" translatable="false">off</string>
    <string name="offer_draw" translatable="false">Offer Draw</string>
    <string name="queen" translatable="false">Queen</string>
    <string name="rook" translatable="false">Rook</string>
    <string name="bishop" translatable="false">Bishop</string>
    <string name="knight" translatable="false">Knight</string>
    <string name="promote_pawn_to" translatable="false">Promote pawn to?</string>
    <string name="clipboard" translatable="false">Clipboard</string>
    <string name="copy_game" translatable="false">Copy Game to Clipboard</string>
    <string name="copy_position" translatable="false">Copy Position to Clipboard</string>
    <string name="paste" translatable="false">Paste from Clipboard</string>
    <string name="share_game" translatable="false">Share Game</string>
    <string name="share_text" translatable="false">Share as Text</string>
    <string name="share_image" translatable="false">Share as Image</string>
    <string name="load_last_file" translatable="false">Load from last file</string>
    <string name="load_game" translatable="false">Load game from PGN file</string>
    <string name="load_position" translatable="false">Load position from file</string>
    <string name="load_scid_game" translatable="false">Load game from Scid file</string>
    <string name="load_del_game" translatable="false">Load deleted game</string>
    <string name="save_game" translatable="false">Save game to PGN file</string>
    <string name="get_fen" translatable="false">Retrieve Position</string>
    <string name="repeat_last_move" translatable="false">Repeat last move</string>
    <string name="truncate_gametree" translatable="false">Truncate Game Tree</string>
    <string name="move_var_up" translatable="false">Move Variation Up</string>
    <string name="move_var_down" translatable="false">Move Variation Down</string>
    <string name="add_null_move" translatable="false">Add Null Move</string>
    <string name="tools_menu" translatable="false">Tools</string>
    <string name="load_save_menu" translatable="false">Load/Save Game</string>
    <string name="goto_move" translatable="false">Goto move</string>
    <string name="limit_strength" translatable="false">Limit Strength</string>
    <string name="set_engine_strength" translatable="false">Set Engine Strength</string>
    <string name="engine_cannot_reduce_strength" translatable="false">Engine cannot reduce playing strength</string>
    <string name="edit_randomization" translatable="false">Edit Randomization</string>
    <string name="white" translatable="false">White</string>
    <string name="black" translatable="false">Black</string>
    <string name="highlight_last_move_title" translatable="false">Highlight last move</string>
    <string name="highlight_last_move_summary" translatable="false">Draw rectangle around last moved piece</string>
    <string name="material_diff_title" translatable="false">Show Material Difference</string>
    <string name="material_diff_summary" translatable="false">Displays an additional subtitle for captured pieces</string>
    <string name="prefs_playing_options" translatable="false">Playing Options</string>
    <string name="prefs_playerName_title" translatable="false">Player Name</string>
    <string name="prefs_playerName_summary" translatable="false">Default player name in new games</string>
    <string name="prefs_autoSwapSides_title" translatable="false">Flip Board: Auto</string>
    <string name="prefs_autoSwapSides_summary" translatable="false">Use side to move to flip board automatically</string>
    <string name="prefs_playerNameFlip_title" translatable="false">Flip Board: Player</string>
    <string name="prefs_playerNameFlip_summary" translatable="false">Use Player Name to flip board automatically</string>
    <string name="prefs_movesPerSession_title" translatable="false">Moves</string>
    <string name="prefs_movesPerSession_summary" translatable="false">Number of moves between time controls</string>
    <string name="prefs_autoDelay_title" translatable="false">Auto Move Delay</string>
    <string name="prefs_autoDelay_summary" translatable="false">Delay between moves in automatic forward/backward mode</string>
    <string name="prefs_hints" translatable="false">Hints</string>
    <string name="prefs_user_interface_appearance" translatable="false">Appearance</string>
    <string name="prefs_user_interface_behavior" translatable="false">Behavior</string>
    <string name="prefs_animateMoves_title" translatable="false">Animate Moves</string>
    <string name="prefs_animateMoves_summary" translatable="false">Animate piece movements</string>
    <string name="prefs_autoScrollTitle_title" translatable="false">Titlebar Scrolling</string>
    <string name="prefs_autoScrollTitle_summary" translatable="false">Auto scroll titlebar if player names are too long</string>
    <string name="prefs_quickMoveInput_title" translatable="false">Quick Move Input</string>
    <string name="prefs_quickMoveInput_summary" translatable="false">From and To squares can be touched in any order. Move is played as soon as uniquely defined.</string>
    <string name="prefs_fullScreenMode_title" translatable="false">Fullscreen Mode</string>
    <string name="prefs_fullScreenMode_summary" translatable="false">Fullscreen mode hides the status bar</string>
    <string name="prefs_wakeLock_title" translatable="false">Disable Screen Timeout</string>
    <string name="prefs_drawSquareLabels_title" translatable="false">Square Labels</string>
    <string name="prefs_drawSquareLabels_summary" translatable="false">Display square labels: a–h and 1–8</string>
    <string name="prefs_dragMoveEnabled_title" translatable="false">Drag Pieces</string>
    <string name="prefs_dragMoveEnabled_summary" translatable="false">Drag a piece to make a move</string>
    <string name="prefs_scrollSensitivity_title" translatable="false">Scrolling Speed</string>
    <string name="prefs_scrollSensitivity_summary" translatable="false">Scrolling speed for game navigation</string>
    <string name="prefs_invertScrollDirection_title" translatable="false">Invert Scroll Direction</string>
    <string name="prefs_invertScrollDirection_summary" translatable="false">Enable this if you think scrolling moves in the wrong direction</string>
    <string name="prefs_scrollGames_title" translatable="false">Sweep horizontally loads game</string>
    <string name="prefs_scrollGames_summary" translatable="false">If enabled, sweeping horizontally on the chess board moves to the next/previous game</string>
    <string name="prefs_autoScrollMoveList_title" translatable="false">Auto scroll move list</string>
    <string name="prefs_autoScrollMoveList_summary" translatable="false">Automatically scroll the move list to the current board position</string>
    <string name="prefs_discardVariations_title" translatable="false">Discard variations</string>
    <string name="prefs_discardVariations_summary" translatable="false">Discard non-mainline moves from move list</string>
    <string name="prefs_leftHanded_title" translatable="false">Left-handed mode</string>
    <string name="prefs_leftHanded_summary" translatable="false">Controls on left side in landscape mode</string>
    <string name="prefs_squareSelectType_title" translatable="false">Square selection</string>
    <string name="prefs_squareSelectType_summary" translatable="false">Control how selecting squares on the chess board behaves</string>
    <string name="prefs_language_title" translatable="false">Language</string>
    <string name="prefs_language_summary" translatable="false">User interface language</string>
    <string name="prefs_fontSize_title" translatable="false">Text Size</string>
    <string name="prefs_fontSize_summary" translatable="false">Font size for move list and game information</string>
    <string name="prefs_largeButtons_title" translatable="false">Large Buttons</string>
    <string name="prefs_largeButtons_summary" translatable="false">Use large buttons for game navigation and mode setting</string>
    <string name="prefs_colors_title" translatable="false">Color Settings</string>
    <string name="prefs_colors_summary" translatable="false">Change individual colors</string>
    <string name="prefs_chess_board" translatable="false">Chess Board</string>
    <string name="prefs_color_brightSquare_title" translatable="false">Bright Squares</string>
    <string name="prefs_color_darkSquare_title" translatable="false">Dark Squares</string>
    <string name="prefs_color_selectedSquare_title" translatable="false">Selected Square</string>
    <string name="prefs_color_brightPiece_title" translatable="false">White Pieces</string>
    <string name="prefs_color_darkPiece_title" translatable="false">Black Pieces</string>
    <string name="prefs_color_squareLabel_title" translatable="false">Square Labels</string>
    <string name="prefs_color_decoration_title" translatable="false">Tablebase hints</string>
    <string name="prefs_move_list" translatable="false">Move List</string>
    <string name="prefs_color_currentMove_title" translatable="false">Current Move</string>
    <string name="prefs_color_pgnComment_title" translatable="false">Comments</string>
    <string name="prefs_color_fontForeground_title" translatable="false">Font</string>
    <string name="prefs_color_generalBackground_title" translatable="false">Background</string>
    <string name="prefs_viewPieceType_title" translatable="false">Piece Names</string>
    <string name="prefs_viewPieceType_summary" translatable="false">Control how chess piece names are displayed</string>
    <string name="prefs_viewPieceSet_title" translatable="false">Piece Set</string>
    <string name="prefs_viewPieceSet_summary" translatable="false">Select chess piece set</string>
    <string name="prefs_ultra_blindMode_title" translatable="false">Blindfold mode</string>
    <string name="prefs_ultra_blindMode_summary" translatable="false">Show circles of grey color instead of pieces</string>
    <string name="buttonDesc_custom1" translatable="false">@string/prefs_custom_button_1</string>
    <string name="buttonDesc_custom2" translatable="false">@string/prefs_custom_button_2</string>
    <string name="buttonDesc_custom3" translatable="false">@string/prefs_custom_button_3</string>
    <string name="buttonDesc_mode" translatable="false">Mode button</string>
    <string name="buttonDesc_back" translatable="false">Backward button</string>
    <string name="buttonDesc_forward"  translatable="false">Forward button</string>
    <string name="blind_button" translatable="false">Toggle blind mode</string>
    <string name="bullet">Bullet</string>
    <string name="training">Training</string>
    <string name="submit">Submit</string>
    <string name="square">Square</string>
</resources>