<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <ListPreference
            android:key="movesPerSession"
            android:title="@string/prefs_movesPerSession_title"
            android:summary="@string/prefs_movesPerSession_summary"
            android:entryValues="@array/moves_per_session_values"
            android:entries="@array/moves_per_session_texts"
            android:defaultValue="@string/moves_per_session_default">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_hints">
        <CheckBoxPreference
            android:key="highlightLastMove"
            android:title="@string/highlight_last_move_title"
            android:summary="@string/highlight_last_move_summary"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="materialDiff"
            android:title="@string/material_diff_title"
            android:summary="@string/material_diff_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/prefs_playing_options">
        <EditTextPreference 
            android:key="playerName" 
            android:title="@string/prefs_playerName_title" 
            android:summary="@string/prefs_playerName_summary" 
            android:defaultValue="Player">
        </EditTextPreference>
        <CheckBoxPreference
            android:key="autoSwapSides" 
            android:title="@string/prefs_autoSwapSides_title" 
            android:summary="@string/prefs_autoSwapSides_summary" 
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="playerNameFlip" 
            android:title="@string/prefs_playerNameFlip_title" 
            android:summary="@string/prefs_playerNameFlip_summary" 
            android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_user_interface_appearance">
        <CheckBoxPreference
            android:key="fullScreenMode" 
            android:title="@string/prefs_fullScreenMode_title" 
            android:summary="@string/prefs_fullScreenMode_summary" 
            android:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference
            android:key="language"
            android:title="@string/prefs_language_title"
            android:summary="@string/prefs_language_summary"
            android:entryValues="@array/language_values"
            android:entries="@array/language_texts"
            android:defaultValue="@string/language_default">
        </ListPreference>
        <ListPreference
            android:key="fontSize"
            android:title="@string/prefs_fontSize_title" 
            android:summary="@string/prefs_fontSize_summary" 
            android:entryValues="@array/font_size_values" 
            android:entries="@array/font_size_texts" 
            android:defaultValue="@string/font_size_default">
        </ListPreference>
        <ListPreference
            android:key="viewPieceType"
            android:title="@string/prefs_viewPieceType_title" 
            android:summary="@string/prefs_viewPieceType_summary"
            android:entryValues="@array/viewPieceType_values" 
            android:entries="@array/viewPieceType_texts" 
            android:defaultValue="@string/viewPieceType_default">
        </ListPreference>
        <ListPreference
            android:key="viewPieceSet"
            android:title="@string/prefs_viewPieceSet_title"
            android:summary="@string/prefs_viewPieceSet_summary"
            android:entryValues="@array/viewPieceSet_values"
            android:entries="@array/viewPieceSet_texts"
            android:defaultValue="@string/viewPieceSet_default">
        </ListPreference>
        <CheckBoxPreference
            android:key="ultrablindMode"
            android:title="@string/prefs_ultra_blindMode_title"
            android:summary="@string/prefs_ultra_blindMode_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="wakeLock" 
            android:title="@string/prefs_wakeLock_title" 
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="drawSquareLabels"
            android:title="@string/prefs_drawSquareLabels_title" 
            android:summary="@string/prefs_drawSquareLabels_summary" 
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="leftHanded" 
            android:title="@string/prefs_leftHanded_title" 
            android:summary="@string/prefs_leftHanded_summary" 
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="animateMoves" 
            android:title="@string/prefs_animateMoves_title" 
            android:summary="@string/prefs_animateMoves_summary" 
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="autoScrollTitle" 
            android:title="@string/prefs_autoScrollTitle_title" 
            android:summary="@string/prefs_autoScrollTitle_summary" 
            android:defaultValue="true">
        </CheckBoxPreference>
        <PreferenceScreen
            android:key="colors" 
            android:title="@string/prefs_colors_title" 
            android:summary="@string/prefs_colors_summary">
            <PreferenceCategory
                android:title="@string/prefs_chess_board">
                <colorpicker.ColorPickerPreference
                    android:key="color_brightSquare"
                    android:title="@string/prefs_color_brightSquare_title" 
                    android:defaultValue="#FFFFFFFA">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_darkSquare" 
                    android:title="@string/prefs_color_darkSquare_title" 
                    android:defaultValue="#FF83A5D2">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_selectedSquare" 
                    android:title="@string/prefs_color_selectedSquare_title" 
                    android:defaultValue="#FF3232D1">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_brightPiece" 
                    android:title="@string/prefs_color_brightPiece_title" 
                    android:defaultValue="#FFF0F0F0">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_darkPiece" 
                    android:title="@string/prefs_color_darkPiece_title" 
                    android:defaultValue="#FF282828">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                     android:key="color_squareLabel" 
                     android:title="@string/prefs_color_squareLabel_title" 
                     android:defaultValue="#FFFF0000">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_decoration" 
                    android:title="@string/prefs_color_decoration_title" 
                    android:defaultValue="#FF808080">
                </colorpicker.ColorPickerPreference>
            </PreferenceCategory>
            <PreferenceCategory
                android:title="@string/prefs_move_list">
                <colorpicker.ColorPickerPreference
                    android:key="color_currentMove" 
                    android:title="@string/prefs_color_currentMove_title" 
                    android:defaultValue="#FF3333FF">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_pgnComment" 
                    android:title="@string/prefs_color_pgnComment_title" 
                    android:defaultValue="#FFC0C000">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_fontForeground" 
                    android:title="@string/prefs_color_fontForeground_title" 
                    android:defaultValue="#FFFFFF00">
                </colorpicker.ColorPickerPreference>
                <colorpicker.ColorPickerPreference
                    android:key="color_generalBackground" 
                    android:title="@string/prefs_color_generalBackground_title" 
                    android:defaultValue="#FF2E2B53">
                </colorpicker.ColorPickerPreference>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_user_interface_behavior">
        <CheckBoxPreference
            android:key="largeButtons"
            android:title="@string/prefs_largeButtons_title"
            android:summary="@string/prefs_largeButtons_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="oneTouchMoves"
            android:title="@string/prefs_quickMoveInput_title"
            android:summary="@string/prefs_quickMoveInput_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference
            android:key="squareSelectType" 
            android:title="@string/prefs_squareSelectType_title" 
            android:summary="@string/prefs_squareSelectType_summary" 
            android:entryValues="@array/squareSelectType_values" 
            android:entries="@array/squareSelectType_texts" 
            android:defaultValue="@string/squareSelectType_default">
        </ListPreference>
        <CheckBoxPreference
            android:key="dragMoveEnabled"
            android:title="@string/prefs_dragMoveEnabled_title"
            android:summary="@string/prefs_dragMoveEnabled_summary"
            android:defaultValue="true">
        </CheckBoxPreference>
        <ListPreference
            android:key="scrollSensitivity"
            android:title="@string/prefs_scrollSensitivity_title"
            android:summary="@string/prefs_scrollSensitivity_summary"
            android:entryValues="@array/scroll_sensitivity_values"
            android:entries="@array/scroll_sensitivity_texts"
            android:defaultValue="@string/scroll_sensitivity_default">
        </ListPreference>
        <CheckBoxPreference
            android:key="invertScrollDirection"
            android:title="@string/prefs_invertScrollDirection_title"
            android:summary="@string/prefs_invertScrollDirection_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="scrollGames"
            android:title="@string/prefs_scrollGames_title"
            android:summary="@string/prefs_scrollGames_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="autoScrollMoveList"
            android:title="@string/prefs_autoScrollMoveList_title"
            android:summary="@string/prefs_autoScrollMoveList_summary"
            android:defaultValue="true">
        </CheckBoxPreference>
        <ListPreference
            android:key="autoDelay"
            android:title="@string/prefs_autoDelay_title"
            android:summary="@string/prefs_autoDelay_summary"
            android:entryValues="@array/autoDelay_values"
            android:entries="@array/autoDelay_texts"
            android:defaultValue="@string/autoDelay_default">
        </ListPreference>
        <CheckBoxPreference
            android:key="discardVariations"
            android:title="@string/prefs_discardVariations_title"
            android:summary="@string/prefs_discardVariations_summary"
            android:defaultValue="false">
        </CheckBoxPreference>
        </PreferenceCategory>
</PreferenceScreen>
